--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "better-sqlite3": "^12.5.0",
+    "clsx": "^2.1.1",
     "next": "16.1.1",
     "react": "19.2.3",
+    "react-calendar": "^6.0.0",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
