--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
     "prisma:studio": "prisma studio",
     "migrate:dev": "prisma migrate dev --name init",
     "migrate:prod": "prisma migrate deploy",
-    "db:reset": "prisma migrate reset --force"
+    "db:reset": "prisma migrate reset --force",
+    "test:ui": "playwright test"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.0",
     "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
     "next": "16.1.1",
+    "pg": "^8.11.0",
     "react": "19.2.3",
     "react-calendar": "^6.0.0",
-    "react-dom": "19.2.3",
-    "@prisma/client": "^5.8.0",
-    "pg": "^8.11.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "prisma": "^5.8.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "prisma": "^5.8.0"
+    "typescript": "^5"
   }
 }
