--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pg": "^8.11.0",
     "react": "19.2.3",
     "react-calendar": "^6.0.0",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
